test/sema/instantiating_non_struct_type.dmz
// RUN: (dmz %s -res-dump 2>&1 || true) | filecheck %s
fn main() -> void {
    let x = invalid{x: 0};
    // CHECK: [[# @LINE - 1 ]]:13: error: symbol 'invalid' not found
}